--- a/project/profile.html
+++ b/project/profile.html
@@ -33,7 +33,7 @@
               <div class="bascket">
                 <span class="fas fa-shopping-cart shop"></span>
               </div>
-              <div class="text">سبد خرید</div>
+              <div class="text" style="color:#fff !important">سبد خرید</div>
               <div class="zero">0</div>
             </div>
             <div class="input-search">
