--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head lang="en">
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>index</title>
     <link href="./common/mycss.css" rel="stylesheet" type="text/css" />
     <link href="./common/bootstrap.rtl.css" rel="stylesheet" type="text/css" />
